# itmo-mlops-25-labs-archive

./: README.md
lectures/: README.md
students/vyugina-ap-p4144/lab3/: .gitignore  README.md  notebook.ipynb  onnx-gpu-inference.py  streamlit_demo.py
students/vyugina-ap-p4144/lab3/monitoring/: monitoring_compose.yml  prometheus.yml
students/vyugina-ap-p4144/lab3/utils/: image.py  inference.py
students/vyugina-ap-p4144/labs_1+2/: LINKS.md  README.md  config.env  docker-compose.yml  pyproject.toml
students/vyugina-ap-p4144/labs_1+2/assets/: dataset_info.md
students/vyugina-ap-p4144/labs_1+2/dockerfiles/: Dockerfile_AirFlow  Dockerfile_MLFlow
students/vyugina-ap-p4144/labs_1+2/mlops/: __init__.py  settings.py
students/vyugina-ap-p4144/labs_1+2/mlops/dags/: airbnb_pipeline.py
students/vyugina-ap-p4144/labs_1+2/mlops/data/: final_neighbourhoods.txt  preprocessing_info.json
students/vyugina-ap-p4144/labs_1+2/mlops/operators/: preprocessor.py  qdrant_loader.py
students/vyugina-ap-p4144/labs_1+2/notebooks/: mlflow_test.ipynb  pyspark_processing.ipynb  research.ipynb  spark_verification.ipynb  upload_bd.ipynb
students/vyugina-ap-p4144/labs_1+2/scripts/: lint.sh
students/vyugina-ap-p4144/labs_1+2/tasks/: lab1.md  lab2.md  solutions.md
